# fusionrate

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.py  README.md  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: conf.py  index.rst
examples/: bosch_cross_sections.py  bosch_ratecoeff.py  bosch_reactivity.py  bosch_reactivity_Tsquared.py  bosch_vs_endf_cross_section.py  bosch_vs_integrated_reactivity.py  boschhale_cross_sections.py  boschhale_reactivity.py  boschhale_reactivity_Tsquared.py  boschhale_vs_endf_cross_section.py  endf_extrapolation.py  halebosch_cross_sections.py  halebosch_reactivity.py  halebosch_reactivity_Tsquared.py  halebosch_vs_endf_cross_section.py  make_ratecoeff_bimaxwellian.py  make_ratecoeff_maxwellian.py  make_ratecoeffs_bimaxwellian.py  make_ratecoeffs_maxwellian.py  reaction_name_resolution.py
fusionrate/: __init__.py  backend.py  bosch.py  constants.py  endf.py  integrators.py  interpolators.py  ion_data.py  load_data.py  parameter.py  physics.py  reaction.py  reactionnames.py
fusionrate/data/: cross_section_6Li(d,p)7Li.csv  cross_section_d(d,n)h.csv  cross_section_d(d,p)t.csv  cross_section_h(d,p)a.csv  cross_section_h(h,2p)a.csv  cross_section_h(t,pn)a.csv  cross_section_t(d,n)a.csv  (+2 more)
fusrate/: __init__.py  bosch.py  boschhale.py  constants.py  endf.py  halebosch.py  integrators.py  interpolators.py  ion_data.py  load_data.py  physics.py  ratecoefficient.py  reaction.py  reactionnames.py
tests/: test_bosch.py  test_interpolators.py  test_reaction.py  test_reactionnames.py  utility.py
(+21 files in other folders)
